[package]
name = "heathcliff"
version = "0.3.0"
edition = "2021"

[[bench]]
name = "bench"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.3"        # PRNG implementation
clap = { version = "4.4.7", features = ["derive"] }
itertools = "0.10.5"
num-complex = "0.4.3"
rand = "0.8.5"          
rand_chacha = "0.3.1"   # PRNG factory
rand_distr = "0.4.3"    # Sample from distributions
serde = {version = "1.0.158", features = ["derive"]}
sha2 = "0.10.6"         # Hash for parm ids

[dev-dependencies]
bincode = "1.3.3"
criterion = "0.4.0"
